# Linear-Blend-Skinning

./: CMakeLists.txt  README.md  REPORT.txt  gui.cc  gui.h  skinning_testpackage.sh
cmake/: env.cmake  gcc.cmake  gl3.cmake  glm.cmake  libutgraphicsutil.cmake  openmp.cmake  warning.cmake
lib/: bitmap.cpp  bitmap.h  debuggl.cc  jpegio.cc  jpegio.h  mmdadapter.cc  mmdadapter.h  portable_gl.h
lib/mmd/: README
lib/mmd/util/: dwarf_impl.inl
src/: CMakeLists.txt  bone_geometry.cc  bone_geometry.h  gui.cc  gui.h  main.cc  procedure_geometry.cc  procedure_geometry.h  render_pass.cc  render_pass.h
src/shaders/: default.frag  default.geom  default.vert  skel_color.frag  skeleton.frag  skeleton.vert
